--- a/bin/data_viz.ipynb
+++ b/bin/data_viz.ipynb
@@ -6,7 +6,6 @@
       "name": "data_viz.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,64 +27,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "WtxPeEmpHIhN"
-      },
-      "source": [
-        "#Access Path"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "5Jvss1dNHRJZ",
-        "outputId": "c8a56c14-b783-4998-c53e-1fedfd8f891e",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        }
-      },
-      "source": [
-        "ls"
-      ],
-      "execution_count": 10,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "training.csv\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "tV77cFh_O6aI",
-        "outputId": "61b9c555-4da8-4c1e-e808-3098cdb94797",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        }
-      },
-      "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
-      ],
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Mounted at /content/drive\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "zFZIYimCA6M2"
       },
       "source": [
@@ -96,10 +37,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "Z8sgvTGdAmBB",
-        "outputId": "13513c91-bf94-4ba9-b5bb-8659e73da050",
+        "outputId": "aef7c4b4-fa86-4215-e2dd-2ab842676ac6",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 35
+          "height": 36
         }
       },
       "source": [
@@ -108,14 +49,61 @@
         "import tensorflow as tf\n",
         "from tensorflow import keras\n",
         "from keras.preprocessing.text import Tokenizer\n",
-        "print(tf.__version__)"
+        "import os\n",
+        "import urllib.request\n",
+        "print(\"Tensorflow version is :\", tf.__version__)"
       ],
-      "execution_count": 23,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "2.3.0\n"
+            "Tensorflow version is : 2.3.0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "WtxPeEmpHIhN"
+      },
+      "source": [
+        "#Access Path"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mrACEbjWR4kT",
+        "outputId": "70f28c26-f84a-427a-a1ab-5a612a798c5e",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 204
+        }
+      },
+      "source": [
+        "!git clone https://github.com/tguerand/SentimentAnalysis\n",
+        "os.mkdir(\"./SentimentAnalysis/DATA\")\n",
+        "#Download file\n",
+        "!gdown --id 1dO4aubOro159awBPzD675c22qtXMOVp0 --output ./SentimentAnalysis/DATA/training.csv"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Cloning into 'SentimentAnalysis'...\n",
+            "remote: Enumerating objects: 23, done.\u001b[K\n",
+            "remote: Counting objects: 100% (23/23), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (17/17), done.\u001b[K\n",
+            "remote: Total 23 (delta 3), reused 8 (delta 0), pack-reused 0\u001b[K\n",
+            "Unpacking objects: 100% (23/23), done.\n",
+            "Downloading...\n",
+            "From: https://drive.google.com/uc?id=1dO4aubOro159awBPzD675c22qtXMOVp0\n",
+            "To: /content/SentimentAnalysis/DATA/training.csv\n",
+            "239MB [00:03, 77.7MB/s]\n"
           ],
           "name": "stdout"
         }
@@ -133,132 +121,30 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "X4I52KdZHzCa",
-        "outputId": "590692a5-e0c6-4ea6-af20-3f00f3989c97",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 206
-        }
+        "id": "X4I52KdZHzCa"
       },
       "source": [
-        "df=pd.read_csv(\"training.csv\",encoding='latin-1')\n",
+        "df=pd.read_csv(\"./SentimentAnalysis/DATA/training.csv\",encoding='latin-1')\n",
         "df.columns=['target', 't_id', 'created_at', 'query', 'user', 'text']\n",
         "#df.head()"
       ],
-      "execution_count": 12,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>target</th>\n",
-              "      <th>t_id</th>\n",
-              "      <th>created_at</th>\n",
-              "      <th>query</th>\n",
-              "      <th>user</th>\n",
-              "      <th>text</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>0</td>\n",
-              "      <td>1467810672</td>\n",
-              "      <td>Mon Apr 06 22:19:49 PDT 2009</td>\n",
-              "      <td>NO_QUERY</td>\n",
-              "      <td>scotthamilton</td>\n",
-              "      <td>is upset that he can't update his Facebook by ...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>0</td>\n",
-              "      <td>1467810917</td>\n",
-              "      <td>Mon Apr 06 22:19:53 PDT 2009</td>\n",
-              "      <td>NO_QUERY</td>\n",
-              "      <td>mattycus</td>\n",
-              "      <td>@Kenichan I dived many times for the ball. Man...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>0</td>\n",
-              "      <td>1467811184</td>\n",
-              "      <td>Mon Apr 06 22:19:57 PDT 2009</td>\n",
-              "      <td>NO_QUERY</td>\n",
-              "      <td>ElleCTF</td>\n",
-              "      <td>my whole body feels itchy and like its on fire</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>0</td>\n",
-              "      <td>1467811193</td>\n",
-              "      <td>Mon Apr 06 22:19:57 PDT 2009</td>\n",
-              "      <td>NO_QUERY</td>\n",
-              "      <td>Karoli</td>\n",
-              "      <td>@nationwideclass no, it's not behaving at all....</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4</th>\n",
-              "      <td>0</td>\n",
-              "      <td>1467811372</td>\n",
-              "      <td>Mon Apr 06 22:20:00 PDT 2009</td>\n",
-              "      <td>NO_QUERY</td>\n",
-              "      <td>joy_wolf</td>\n",
-              "      <td>@Kwesidei not the whole crew</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div>"
-            ],
-            "text/plain": [
-              "   target  ...                                               text\n",
-              "0       0  ...  is upset that he can't update his Facebook by ...\n",
-              "1       0  ...  @Kenichan I dived many times for the ball. Man...\n",
-              "2       0  ...    my whole body feels itchy and like its on fire \n",
-              "3       0  ...  @nationwideclass no, it's not behaving at all....\n",
-              "4       0  ...                      @Kwesidei not the whole crew \n",
-              "\n",
-              "[5 rows x 6 columns]"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 12
-        }
-      ]
+      "execution_count": 9,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "8x8xZaI1BBTL",
-        "outputId": "bfcc0398-d6d8-46ea-fe43-06962d80ff3a",
+        "outputId": "e78d90ac-a633-4f20-f8e3-1c9f0c472c7a",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 109
+          "height": 111
         }
       },
       "source": [
         "print(df[\"text\"].head(5).to_string())"
       ],
-      "execution_count": 15,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -281,7 +167,7 @@
       "source": [
         "sentences = df['text']"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -292,7 +178,7 @@
       "source": [
         "tokenizer = Tokenizer(num_words=1000)"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -309,7 +195,7 @@
         "tokenizer.fit_on_texts(sentences)\n",
         "tokenizer.word_index"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
