Data preparation part: uppercase

--- a/bin/data_viz.ipynb
+++ b/bin/data_viz.ipynb
@@ -37,10 +37,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "Z8sgvTGdAmBB",
-        "outputId": "dfacac57-0b6c-497b-f11e-671c0c46fbb3",
+        "outputId": "4aa29152-8ec0-4075-8d8e-56615c441f16",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 36
+          "height": 35
         }
       },
       "source": [
@@ -55,7 +55,7 @@
         "from sklearn.model_selection import train_test_split\n",
         "print(\"Tensorflow version is :\", tf.__version__)"
       ],
-      "execution_count": 13,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -79,10 +79,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "mrACEbjWR4kT",
-        "outputId": "208a8929-de2e-4657-96ab-c5ead2172972",
+        "outputId": "1c4dc5de-381f-41f2-ad9f-d31e2074aac2",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 204
+          "height": 202
         }
       },
       "source": [
@@ -91,21 +91,21 @@
         "#Download file\n",
         "!gdown --id 1dO4aubOro159awBPzD675c22qtXMOVp0 --output ./SentimentAnalysis/DATA/training.csv"
       ],
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Cloning into 'SentimentAnalysis'...\n",
-            "remote: Enumerating objects: 32, done.\u001b[K\n",
-            "remote: Counting objects: 100% (32/32), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (23/23), done.\u001b[K\n",
-            "remote: Total 32 (delta 5), reused 13 (delta 0), pack-reused 0\u001b[K\n",
-            "Unpacking objects: 100% (32/32), done.\n",
+            "remote: Enumerating objects: 39, done.\u001b[K\n",
+            "remote: Counting objects: 100% (39/39), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (30/30), done.\u001b[K\n",
+            "remote: Total 39 (delta 7), reused 13 (delta 0), pack-reused 0\u001b[K\n",
+            "Unpacking objects: 100% (39/39), done.\n",
             "Downloading...\n",
             "From: https://drive.google.com/uc?id=1dO4aubOro159awBPzD675c22qtXMOVp0\n",
             "To: /content/SentimentAnalysis/DATA/training.csv\n",
-            "239MB [00:06, 37.7MB/s]\n"
+            "239MB [00:02, 95.8MB/s]\n"
           ],
           "name": "stdout"
         }
@@ -130,23 +130,23 @@
         "df.columns=['target', 't_id', 'created_at', 'query', 'user', 'text']\n",
         "#df.head()"
       ],
-      "execution_count": 4,
+      "execution_count": 7,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "8x8xZaI1BBTL",
-        "outputId": "338e4088-d979-4260-c8cb-4ca9ed247276",
+        "outputId": "c62ff768-754b-4a87-e348-1b9d28ec18ca",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 111
+          "height": 109
         }
       },
       "source": [
         "print(df[\"text\"].head(5).to_string())"
       ],
-      "execution_count": 5,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -173,6 +173,169 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "GLyxEimZc357"
+      },
+      "source": [
+        "#### Data preparation"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "aPMiTy1ORuSX",
+        "outputId": "9f464e69-d6d5-47ff-9112-935b644c3686",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 109
+        }
+      },
+      "source": [
+        "# Find which words are upper to remove ones whithout info ('I', ...)\n",
+        "\n",
+        "#df[\"text\"][0] = \"I AAA\"\n",
+        "irrelevant_words = ['I']\n",
+        "#df[\"redondant\"] = df[\"text\"].apply(lambda x: True if \"I\" in x.split() else False)\n",
+        "x = df[\"text\"]\n",
+        "\n",
+        "for word in irrelevant_words:\n",
+        "  x = x.str.replace(word,'')\n"
+      ],
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:2: SettingWithCopyWarning: \n",
+            "A value is trying to be set on a copy of a slice from a DataFrame\n",
+            "\n",
+            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+            "  \n"
+          ],
+          "name": "stderr"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "NWPd-jwVInD7",
+        "outputId": "5baa2ff5-496e-4764-c7cb-0b847ff5ef46",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 128
+        }
+      },
+      "source": [
+        "# Check if there is a UPPERCASE word in the series\n",
+        "\n",
+        "df[\"upper\"] = x.str.split()\n",
+        "\n",
+        "df[\"upper\"] = df[\"upper\"].apply(lambda x: [i.isupper() for i in x])\n",
+        "df[\"upper\"] = df[\"upper\"].apply(lambda x: True if True in x else False)\n",
+        "\n",
+        "\n",
+        "df[\"upper\"].head()"
+      ],
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0     True\n",
+              "1    False\n",
+              "2    False\n",
+              "3    False\n",
+              "4    False\n",
+              "Name: upper, dtype: bool"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 36
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "TCwMiie1Krue",
+        "outputId": "35e28006-a9e9-4c64-e213-154fdc9ebec7",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 143
+        }
+      },
+      "source": [
+        "confusion_matrix = pd.crosstab(df[\"target\"], df[\"upper\"], rownames=['target'], colnames=['is any upper'])\n",
+        "confusion_matrix/df.shape[0]*100"
+      ],
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th>is any upper</th>\n",
+              "      <th>False</th>\n",
+              "      <th>True</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>target</th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>42.012589</td>\n",
+              "      <td>7.98738</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>41.297651</td>\n",
+              "      <td>8.70238</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "is any upper      False    True \n",
+              "target                          \n",
+              "0             42.012589  7.98738\n",
+              "4             41.297651  8.70238"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 39
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "2y5jBnrXqHaG"
       },
       "source": [
@@ -192,7 +355,7 @@
         "sequences=tokenizer.texts_to_sequences(sentences)\n",
         "padded=pad_sequences(sequences,padding=\"post\")"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -224,7 +387,7 @@
         "test_sequences=tokenizer.texts_to_sequences(X_test)\n",
         "test_padded=pad_sequences(test_sequences,padding=\"post\")"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -254,7 +417,7 @@
         "    )\n",
         "model.compile(loss=\"binary_crossentropy\",optimizer=\"adam\",metrics=[\"accuracy\"])"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -270,7 +433,7 @@
       "source": [
         "model.fit(train_padded,y_train,epochs=10,batch_size=100,validation_data=(test_padded,y_test))"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -311,7 +474,7 @@
       "source": [
         ""
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
