--- a/bin/data_viz.ipynb
+++ b/bin/data_viz.ipynb
@@ -55,7 +55,7 @@
         "from sklearn.model_selection import train_test_split\n",
         "print(\"Tensorflow version is :\", tf.__version__)"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -91,7 +91,7 @@
         "#Download file\n",
         "!gdown --id 1dO4aubOro159awBPzD675c22qtXMOVp0 --output ./SentimentAnalysis/DATA/training.csv"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -130,7 +130,7 @@
         "df.columns=['target', 't_id', 'created_at', 'query', 'user', 'text']\n",
         "#df.head()"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -146,7 +146,7 @@
       "source": [
         "print(df[\"text\"].head(5).to_string())"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -191,16 +191,22 @@
       },
       "source": [
         "# Find which words are upper to remove ones whithout info ('I', ...)\n",
-        "\n",
         "#df[\"text\"][0] = \"I AAA\"\n",
         "irrelevant_words = ['I']\n",
         "#df[\"redondant\"] = df[\"text\"].apply(lambda x: True if \"I\" in x.split() else False)\n",
         "x = df[\"text\"]\n",
-        "\n",
         "for word in irrelevant_words:\n",
-        "  x = x.str.replace(word,'')\n"
+        "  x = x.str.replace(word,'')\n",
+        "\n",
+        "# Check if there is a UPPERCASE word in the series\n",
+        "df[\"upper\"] = x.str.split()\n",
+        "df[\"upper\"] = df[\"upper\"].apply(lambda x: [i.isupper() for i in x])\n",
+        "df[\"upper\"] = df[\"upper\"].apply(lambda x: True if True in x else False)\n",
+        "#df[\"upper\"].head()\n",
+        "confusion_matrix = pd.crosstab(df[\"target\"], df[\"upper\"], rownames=['target'], colnames=['is any upper'])\n",
+        "confusion_matrix/df.shape[0]*100"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -218,120 +224,91 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "NWPd-jwVInD7",
-        "outputId": "5baa2ff5-496e-4764-c7cb-0b847ff5ef46",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 128
-        }
+        "id": "NWPd-jwVInD7"
       },
       "source": [
+        "#------------------------Eliminate stop words-------------------------------\n",
+        "# Find which words are upper to remove ones whithout info ('I', ...)\n",
+        "irrelevant_words = stop_words\n",
+        "x = df[\"text\"]\n",
+        "for word in irrelevant_words:\n",
+        "  x = x.str.replace(word,'')\n",
+        "\n",
         "# Check if there is a UPPERCASE word in the series\n",
-        "\n",
         "df[\"upper\"] = x.str.split()\n",
-        "\n",
         "df[\"upper\"] = df[\"upper\"].apply(lambda x: [i.isupper() for i in x])\n",
         "df[\"upper\"] = df[\"upper\"].apply(lambda x: True if True in x else False)\n",
-        "\n",
-        "\n",
-        "df[\"upper\"].head()"
+        "confusion_matrix = pd.crosstab(df[\"target\"], df[\"upper\"], rownames=['target'], colnames=['is any upper'])\n",
+        "confusion_matrix/df.shape[0]*100"
       ],
-      "execution_count": 36,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "0     True\n",
-              "1    False\n",
-              "2    False\n",
-              "3    False\n",
-              "4    False\n",
-              "Name: upper, dtype: bool"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 36
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "TCwMiie1Krue",
-        "outputId": "35e28006-a9e9-4c64-e213-154fdc9ebec7",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 143
-        }
+        "id": "TCwMiie1Krue"
       },
       "source": [
-        "confusion_matrix = pd.crosstab(df[\"target\"], df[\"upper\"], rownames=['target'], colnames=['is any upper'])\n",
-        "confusion_matrix/df.shape[0]*100"
+        ""
       ],
-      "execution_count": 39,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th>is any upper</th>\n",
-              "      <th>False</th>\n",
-              "      <th>True</th>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>target</th>\n",
-              "      <th></th>\n",
-              "      <th></th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>42.012589</td>\n",
-              "      <td>7.98738</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4</th>\n",
-              "      <td>41.297651</td>\n",
-              "      <td>8.70238</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div>"
-            ],
-            "text/plain": [
-              "is any upper      False    True \n",
-              "target                          \n",
-              "0             42.012589  7.98738\n",
-              "4             41.297651  8.70238"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 39
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mwK_Iv1Ge2tB"
+      },
+      "source": [
+        "#------------------------Data words Frequency-------------------------------\n",
+        "treshhold=0.1\n",
+        "dict_frequency=dict(tokenizer.word_counts)\n",
+        "col=pd.Series(dict_frequency, name='freq')/22171669*100\n",
+        "df_freq=pd.DataFrame(col.sort_values(ascending=False))\n",
+        "df_freq.reset_index(drop=False)\n",
+        "df_freq=df_freq[df_freq[\"freq\"]>treshhold]\n",
+        "df_freq['freq']"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-zBY3YtIgAk2"
+      },
+      "source": [
+        "df_copy=df\n",
+        "df_copy[\"length\"]=df_copy[\"text\"].str.len()\n",
+        "df[\"length\"].value_counts()\n",
+        "#---------------------------Dataviz------------------------------------\n",
+        "import seaborn as sns\n",
+        "import numpy as np\n",
+        "sns.set_theme(); np.random.seed(0)\n",
+        "x = np.random.randn(100)\n",
+        "ax = sns.displot(df_copy, x=\"length\", hue=\"target\")\n",
+        "\n",
+        "import seaborn as sns\n",
+        "sns.boxplot(\n",
+        "    data=df_copy,\n",
+        "    x='target',\n",
+        "    y='length',\n",
+        "    color='red')"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4yY18tdIgFTp"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
