--- a/bin/data_viz.ipynb
+++ b/bin/data_viz.ipynb
@@ -325,6 +325,7 @@
         "id": "J6Z9q775GniX"
       },
       "source": [
+        "vocab_size = 100\n",
         "sentences = df['text']\n",
         "tokenizer = Tokenizer(num_words=vocab_size, oov_token=\"<00V>\")\n",
         "tokenizer.fit_on_texts(sentences)\n",
@@ -350,11 +351,12 @@
         "id": "2Ju_bj2yChFT"
       },
       "source": [
+        "vocab_size = 100\n",
         "sentences = df['text']\n",
         "# Split Training and Testing\n",
         "X_train, X_test, y_train, y_test = train_test_split(\n",
         "    df['text'], df[\"target\"], test_size=0.33, random_state=42)\n",
-        "tokenizer = Tokenizer(num_words=100, oov_token=\"<00V>\")\n",
+        "tokenizer = Tokenizer(num_words=vocab_size, oov_token=\"<00V>\")\n",
         "tokenizer.fit_on_texts(X_train)\n",
         "word_index=tokenizer.word_index\n",
         "\n",
@@ -383,7 +385,6 @@
       },
       "source": [
         "embedding_dim = 16\n",
-        "vocab_size = 100\n",
         "model=tf.keras.Sequential(\n",
         "    [\n",
         "     tf.keras.layers.Embedding(vocab_size,embedding_dim),\n",
