--- a/bin/data_viz.ipynb
+++ b/bin/data_viz.ipynb
@@ -182,6 +182,71 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "HLB8t79uj1Gk"
+      },
+      "source": [
+        "#code Micka\n",
+        "\n",
+        "df[\"nbhash\"]=df[\"text\"].str.count(\"#\")>0\n",
+        "df[\"nbat\"]=df[\"text\"].str.count(\"@\")>0\n",
+        "import re\n",
+        "df[\"text\"] = df[\"text\"].apply(lambda x : re.sub('@[a-zA-Z0-9]+', 'ààà', x))"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "LsgpmUNCj-Ra"
+      },
+      "source": [
+        "#truc à garder ou à tester :\n",
+        "# les chiffres\n",
+        "# les ! et ?\n",
+        "# faire gafe aux ', par exemple aren't ou didn't, qui expriment une négation\n",
+        "# http://twitpic\n",
+        "# http://bit\n",
+        "# http://tinyurl\n",
+        "# http://plurk\n",
+        "# http://www\n",
+        "# http://blip\n",
+        "# &lt;3 qui vaut <3\n",
+        "# :) ;) :/ mais aussi : ) ou :'(\n",
+        "# &amp &gt et &quot qui ont l'air d'être des infos html\n",
+        "# w/o without\n",
+        "# w/ with\n",
+        "# b/c because\n",
+        "# ... .. et .... \n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "J611IpXEkLqh"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "MIeTllDZkLzE"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "aPMiTy1ORuSX",
         "outputId": "9f464e69-d6d5-47ff-9112-935b644c3686",
         "colab": {
