--- a/bin/data_viz.ipynb
+++ b/bin/data_viz.ipynb
@@ -293,18 +293,15 @@
       },
       "source": [
         "#------------------------Eliminate stop words-------------------------------\n",
-        "# Find which words are upper to remove ones whithout info ('I', ...)\n",
-        "irrelevant_words = stop_words\n",
+        "# Put everything to lower\n",
+        "df[\"text\"]=df[\"text\"].str.lower()\n",
+        "# remove stop_words\n",
+        "import nltk\n",
+        "from nltk.corpus import stopwords\n",
+        "#nltk.download('stopwords')\n",
+        "irrelevant_words = stopwords.words('english')\n",
         "x = df[\"text\"]\n",
-        "for word in irrelevant_words:\n",
-        "  x = x.str.replace(word,'')\n",
-        "\n",
-        "# Check if there is a UPPERCASE word in the series\n",
-        "df[\"upper\"] = x.str.split()\n",
-        "df[\"upper\"] = df[\"upper\"].apply(lambda x: [i.isupper() for i in x])\n",
-        "df[\"upper\"] = df[\"upper\"].apply(lambda x: True if True in x else False)\n",
-        "confusion_matrix = pd.crosstab(df[\"target\"], df[\"upper\"], rownames=['target'], colnames=['is any upper'])\n",
-        "confusion_matrix/df.shape[0]*100"
+        "df[\"text\"] = df[\"text\"].apply(lambda x: [x.replace(word,'') for word in irrelevant_words])"
       ],
       "execution_count": null,
       "outputs": []
