--- a/bin/data_viz.ipynb
+++ b/bin/data_viz.ipynb
@@ -55,7 +55,7 @@
         "from sklearn.model_selection import train_test_split\n",
         "print(\"Tensorflow version is :\", tf.__version__)"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -91,7 +91,7 @@
         "#Download file\n",
         "!gdown --id 1dO4aubOro159awBPzD675c22qtXMOVp0 --output ./SentimentAnalysis/DATA/training.csv"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -130,7 +130,7 @@
         "df.columns=['target', 't_id', 'created_at', 'query', 'user', 'text']\n",
         "#df.head()"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -208,7 +208,7 @@
         "df[\"text\"] = df[\"text\"].apply(lambda x : x.replace(\" .. \",\" pointdesuspension \"))\n",
         "df[\"text\"] = df[\"text\"].apply(lambda x : x.replace(\" .... \",\" pointdesuspension \"))\n"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -314,10 +314,9 @@
         "# remove stop_words\n",
         "import nltk\n",
         "from nltk.corpus import stopwords\n",
-        "#nltk.download('stopwords')\n",
+        "nltk.download('stopwords')\n",
         "irrelevant_words = stopwords.words('english')\n",
-        "x = df[\"text\"]\n",
-        "df[\"text\"] = df[\"text\"].apply(lambda x: [x.replace(word,'') for word in irrelevant_words])"
+        "df['text'] = df[\"text\"].apply(lambda x: ' '.join([word for word in x.split() if word not in (irrelevant_words)]))\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -411,7 +410,7 @@
         "sequences=tokenizer.texts_to_sequences(sentences)\n",
         "padded=pad_sequences(sequences,padding=\"post\")"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -427,7 +426,7 @@
       "source": [
         "word_index"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
